--- a/index.html
+++ b/index.html
@@ -4,57 +4,109 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
+  <link rel="stylesheet" href="./Style/index.css" />
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | News homepage</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  Home
-  New
-  Popular
-  Trending
-  Categories
-
-  The Bright Future of Web 3.0?
-
-  We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
-  But is it really fulfilling its promise?
-
-  Read more
-
-  New 
-
-  Hydrogen VS Electric Cars
-  Will hydrogen-fueled cars ever catch up to EVs?
-
-  The Downsides of AI Artistry
-  What are the possible adverse effects of on-demand AI image generation?
-
-  Is VC Funding Drying Up?
-  Private funding by VC firms is down 50% YOY. We take a look at what that means.
-
-  01
-  Reviving Retro PCs
-  What happens when old PCs are given modern upgrades?
-
-  02
-  Top 10 Laptops of 2022
-  Our best picks for various needs and budgets.
-
-  03
-  The Growth of Gaming
-  How the pandemic has sparked fresh opportunities.
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+  <div class="container">
+    <div class="menu-section">
+        <div class="img-logo">
+          <img src="./assets/images/logo.svg" alt="logo" />
+        </div>
+        <div class="nav">
+          <ul class="menu-bar">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">New</a></li>
+            <li><a href="#">Popular</a></li>
+            <li><a href="#">Trending</a></li>
+            <li><a href="#">Categories</a></li>
+          </ul>
+        </div>            
+    </div>
+    <div class="body-section-center">
+      <div class="body-elt-center">
+        <div class="img-heading-container">
+          <div class="img-container">
+            <img src="./assets/images/image-web-3-desktop.jpg" alt="image de vu" >
+          </div>
+          <div class="heading-title">
+            <div class="title-h1">
+              <h1>
+                The Bright Future of Web 3.0?
+              </h1>
+            </div>
+            <div class="read-more">
+              <div class="text-read-more"> 
+                <p>
+                  We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
+                  But is it really fulfilling its promise?
+                </p>     
+              </div>
+              <div class="button-read-more">
+                <button>Read more</button>
+              </div>
+            </div> 
+          </div>
+        </div>       
+        <div class="articles-right">
+            <h1> New </h1>
+            <h2> Hydrogen VS Electric Cars </h2>
+            <p> Will hydrogen-fueled cars ever catch up to EVs? </p>
+            <br>
+            <hr>
+            <br>
+            <h2> The Downsides of AI Artistry </h2>
+            <p>What are the possible adverse effects of on-demand AI image generation?</p>
+            <br>
+            <hr>
+            <br>
+            <h2> Is VC Funding Drying Up? </h2>
+            <p>Private funcidng by VC firms is down 50% YOY. We take a look at what that means.</p>
+        </div>
+      </div>
+      <br>
+      <div class="list-items">
+          <div class="items-1">
+            <div class="img-items">
+              <img src="./assets/images/image-retro-pcs.jpg" alt="retro-pc" />
+            </div>
+            <div>
+              <h2>01</h2>
+              Reviving Retro PCs
+              What happens when old PCs are given modern upgrades?
+            </div>
+          </div>         
+          <div class="items-1">
+            <div class="img-items">
+              <img src="./assets/images/image-top-laptops.jpg" alt="top-laptop-pc" />
+            </div>            
+            <div>
+              <h2>02</h2>
+              Top 10 Laptops of 2022
+              Our best picks for various needs and budgets.
+            </div>
+          </div>
+          <div class="items-1">
+            <div class="img-items">
+              <img src="./assets/images/image-gaming-growth.jpg" alt="manette-pc" />
+            </div>
+            <div>
+              <h2>03</h2>
+              The Growth of Gaming
+              How the pandemic has sparked fresh opportunities.
+            </div>
+          </div>
+      </div>
+      <br>
+      <footer>
+        <div class="attribution">
+          Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+          Coded by <a href="#">Borel Daris</a>.
+        </div>
+      </footer>      
+    </div>
+  </body>
 </html>
